objects/privateAppEx__Store__c.object
<CustomObject>
    <description>Branding and settings for the store.</description>
    <fields>
        <fullName>privateAppEx__AppTypes__c</fullName>
        <description>The types of apps that can be listed in the store.</description>
        <inlineHelpText>The types of apps that can be listed in the store.</inlineHelpText>
        <label>App Types</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>privateAppEx__EnableChatter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if Chatter is enabled to facilitate communication and collaboration around the app. Only available if Chatter is enabled in the Salesforce organization.</description>
        <inlineHelpText>Indicates if Chatter is enabled to facilitate communication and collaboration around the app. Only available if Chatter is enabled in the Salesforce organization.</inlineHelpText>
        <label>Enable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privateAppEx__LiveApps__c</fullName>
        <description>The number of apps that are currently listed in the store and available for install.</description>
        <inlineHelpText>The number of apps that are currently listed in the store and available for install.</inlineHelpText>
        <label>Published Apps</label>
        <summaryFilterItems>
            <field>privateAppEx__App__c.privateAppEx__LiveListings__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>privateAppEx__App__c.privateAppEx__Store__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PageViewsAllTime__c</fullName>
        <description>The total number page views of listings in the store over all time.</description>
        <inlineHelpText>The total number page views of listings in the store over all time.</inlineHelpText>
        <label>Page Views (All Time)</label>
        <summarizedField>privateAppEx__App__c.privateAppEx__PageViewsAllTime__c</summarizedField>
        <summaryForeignKey>privateAppEx__App__c.privateAppEx__Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PopularityAllTime__c</fullName>
        <description>The total requests/installs done on listings in the store over all time.</description>
        <inlineHelpText>The total requests/installs done on listings in the store over all time.</inlineHelpText>
        <label>Requests/Installs</label>
        <summarizedField>privateAppEx__App__c.privateAppEx__PopularityAllTime__c</summarizedField>
        <summaryForeignKey>privateAppEx__App__c.privateAppEx__Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Status__c</fullName>
        <description>Describes whether the store is online and available to standard users or offline and available only to store administrators.</description>
        <inlineHelpText>Describes whether the store is online and available to standard users or offline and available only to store administrators.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Offline</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>privateAppEx__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>